--- a/templates/rest/detail.html
+++ b/templates/rest/detail.html
@@ -4,32 +4,43 @@
 {% block content %}
 <html lang="en">
 <body>
-    <div align="center"><img src="/static/icon/menu1.png" width="370px" height="370px" ></div>
+    <div align="center"><img src="data:;base64,{{image}}" width="370px" height="370px" ></div>
     <div style='margin-top:20px'></div>
-    <table border="6" width="500px" height="700px" align="center">
+    <table border="6" width="600px" height="700px" align="center">
         <tr align="center" style="color: black; font-style: Comic Sans MS;">
             <td style="width: 70px;">식당명</td>
-            <td style="width: 70px;">content</td>
+            <td style="width: 70px;">{{data.2}}</td>
         </tr>
         <tr align="center" style="color: black;">
             <td style="width: 70px;">전화번호</td>
-            <td style="width: 70px;">content</td>
+            {% if data.3 == None %}
+            <td style="width: 70px;">등록된 번호가 없습니다.</td>
+            {% else %}
+            <td style="width: 70px;">{{data.3}}</td>
+            {% endif %}
         </tr>
         <tr align="center" style="color: black;">
             <td style="width: 70px;">주소</td>
-            <td style="width: 70px;">content</td>
+            <td style="width: 70px;">{{data.1}}<br>
+            <a href = 'https://map.kakao.com/?itemId={{data.0}}' face='Comic Sans MS' class="btn btn-light" target="_blank" style="margin-right:10px">지도보기</button>
+            <a href='https://map.kakao.com/?map_type=TYPE_MAP&target=walk&rt=975771,486419,{{data.11}},{{data.12}}&rt1=한가람IT&rt2={{data.2}}&rtIds=,{{data.0}}' face='Comic Sans MS' class="btn btn-light" target="_blank">길찾기</a>
+            </td>
         </tr>
         <tr align="center" style="color: black;">
             <td style="width: 70px;">메뉴</td>
-            <td style="width: 70px;">content</td>
+            <td style="width: 70px;">
+            {% for tmp in menu %}
+                {{tmp}}<br>
+            {% endfor %}
+            </td>
         </tr>
         <tr align="center" style="color: black;">
-            <td style="width: 70px;">휴무여부</td>
-            <td style="width: 70px;">content</td>
-        </tr>
-        <tr align="center" style="color: black;">
-            <td style="width: 70px;">주소</td>
-            <td style="width: 70px;">content</td>
+            <td style="width: 70px;">영업시간</td>
+            {% if data.7 == None %}
+            <td style="width: 70px;">등록된 영업시간 정보가 없습니다.</td>
+            {% else %}
+            <td style="width: 70px;">{{data.7}}</td>
+            {% endif %}
         </tr>
         
     </table>
