--- a/templates/rest/detail.html
+++ b/templates/rest/detail.html
@@ -4,47 +4,77 @@
 {% block content %}
 <html lang="en">
 <body>
-    <div align="center"><img src="data:;base64,{{image}}" width="370px" height="370px" ></div>
-    <div style='margin-top:20px'></div>
-    <table border="6" width="600px" height="700px" align="center">
-        <tr align="center" style="color: black; font-style: Comic Sans MS;">
-            <td style="width: 70px;">식당명</td>
-            <td style="width: 70px;">{{data.2}}</td>
-        </tr>
-        <tr align="center" style="color: black;">
-            <td style="width: 70px;">전화번호</td>
-            {% if data.3 == None %}
-            <td style="width: 70px;">등록된 번호가 없습니다.</td>
-            {% else %}
-            <td style="width: 70px;">{{data.3}}</td>
-            {% endif %}
-        </tr>
-        <tr align="center" style="color: black;">
-            <td style="width: 70px;">주소</td>
-            <td style="width: 70px;">{{data.1}}<br>
-            <a href = 'https://map.kakao.com/?itemId={{data.0}}' face='Comic Sans MS' class="btn btn-light" target="_blank" style="margin-right:10px">지도보기</button>
-            <a href='https://map.kakao.com/?map_type=TYPE_MAP&target=walk&rt=975771,486419,{{data.11}},{{data.12}}&rt1=한가람IT&rt2={{data.2}}&rtIds=,{{data.0}}' face='Comic Sans MS' class="btn btn-light" target="_blank">길찾기</a>
+    <div class='container' style='margin-top:20px'>
+    <table class = 'table table-striped' border='3' align="center" style="width: 100%;" >
+        <tr style="color: black; font-style: Comic Sans MS;">
+            <td style='text-align:center;'>
+                <img src="data:;base64,{{image}}" width="370px" height="370px" >
             </td>
         </tr>
-        <tr align="center" style="color: black;">
-            <td style="width: 70px;">메뉴</td>
-            <td style="width: 70px;">
+        <tr style="color: black; font-style: Comic Sans MS;text-align: center;">
+        <td>
+            <a style="text-align: center;">
+                
+                    <a><font size="7" face='휴먼편지체' color="Black">
+                    {{data.2}}
+                </font></a>
+                
+                
+                    <a><font size="5" face='휴먼편지체' color="Navy">
+                        {{data.4}}
+                    </font></a>
+                
+            </a>
+        </td>
+        </tr>
+        <tr style="color: black; font-style: Comic Sans MS;">
+        <td style='text-align:center;'>
+            <a href = 'https://map.kakao.com/?itemId={{data.0}}' face='Comic Sans MS' class="btn btn-info" target="_blank" >지도보기</button>
+            <a href='https://map.kakao.com/?map_type=TYPE_MAP&target=walk&rt=975771,486419,{{data.11}},{{data.12}}&rt1=한가람IT&rt2={{data.2}}&rtIds=,{{data.0}}' face='Comic Sans MS' class="btn btn-link" target="_blank">길찾기</a>
+            <a href='https://map.kakao.com/?srcid={{data.0}}&confirmid={{data.0}}&q={{data.2}}&rv=on'  face='Comic Sans MS' class="btn btn-link" target="_blank">로드뷰</a>
+        </td>
+        </tr>
+    </table>
+    
+    <table border="6" style="width: 100%;" align="center">
+       
+        <tr  style="color: black;">
+            <td style='text-align:center;'>전화번호</td>
+            {% if data.3 == None %}
+            <td >등록된 번호가 없습니다.</td>
+            {% else %}
+            <td >{{data.3}}</td>
+            {% endif %}
+        </tr>
+        <tr  style="color: black;">
+            <td style='text-align:center;'>주소</td>
+            <td >{{data.1}}<br>
+            <a href = 'https://map.kakao.com/?itemId={{data.0}}' face='Comic Sans MS' class="btn btn-light" target="_blank" style="margin-right:1%">지도보기</button>
+            <a href='https://map.kakao.com/?map_type=TYPE_MAP&target=walk&rt=975771,486419,{{data.11}},{{data.12}}&rt1=한가람IT&rt2={{data.2}}&rtIds=,{{data.0}}' face='Comic Sans MS' class="btn btn-light" target="_blank"style="margin-right:1%">길찾기</a>
+            <a href='https://map.kakao.com/?srcid={{data.0}}&confirmid={{data.0}}&q={{data.2}}&rv=on'  face='Comic Sans MS' class="btn btn-light" target="_blank">로드뷰</a>
+            </td>
+        </tr>
+        <tr  style="color: black;">
+            <td style='text-align:center;'>메뉴</td>
+            <td >
             {% for tmp in menu %}
                 {{tmp}}<br>
             {% endfor %}
             </td>
         </tr>
-        <tr align="center" style="color: black;">
-            <td style="width: 70px;">영업시간</td>
+        <tr style="color: black;">
+            <td style='text-align:center;'>영업시간</td>
             {% if data.7 == None %}
-            <td style="width: 70px;">등록된 영업시간 정보가 없습니다.</td>
+            <td>등록된 영업시간 정보가 없습니다.</td>
             {% else %}
-            <td style="width: 70px;">{{data.7}}</td>
+            <td>{{data.7}}</td>
             {% endif %}
         </tr>
         
     </table>
+</div>
     <div style='margin-top: 50px;'></div>
 </body>
+
 </html>
 {% endblock %}
