--- a/templates/rest/search.html
+++ b/templates/rest/search.html
@@ -22,7 +22,7 @@
                 <img src="\static\icon\삼겹살.jpg" style="width:120px; height:120px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <img src="\static\icon\두루치기.jpg" style="width:120px; height:120px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <div class="container" align='center' style='margin-top:150px; width:700px'>
-            <button type="button" style="width:320px; height:50px;" class="btn btn-light">카테고리를 선택하세요 (복수선택 가능)</button>
+            <button type="button" style="width:320px; height:50px;" class="btn btn-outline-dark">카테고리를 선택하세요 (복수선택 가능)</button>
             <div style='margin-top:30px'></div>
             <div class='input_chk' style="width:700px; color: black;"> 
             
@@ -75,7 +75,7 @@
 
             </div>
                 <div style='margin-top:70px'></div>
-                <button type="button" style="width:180px; height:50px;" class="btn btn-secondary">거리를 설정하세요.</button><br>
+                <button type="button" style="width:180px; height:50px;" class="btn btn-outline-dark">거리를 설정하세요.</button><br>
                 <select name="distance" style="width:80px; margin-top:30px;">
                     <option value="100">100m</option>
                     <option value="200">200m</option>
@@ -84,7 +84,7 @@
                     <option value="500">500m</option>
                 </select >&nbsp;<br><br>
                 
-                <button class = 'btn btn-outline-dark' type="submit" >통합검색</button> &nbsp;&nbsp;
+                <button class = 'btn btn-dark' type="submit" >통합검색</button> &nbsp;&nbsp;
             </form>
     </td>
     <td style='width:25%; text-align: center;'>
