--- a/templates/rest/index.html
+++ b/templates/rest/index.html
@@ -43,10 +43,10 @@
                 <font size="30.2em" face="Comic Sans MS" color="Black">&nbsp; 주요기능 &nbsp;</font>
                 <img type='image/png' width="60" height="60" src='/static/icon/menu2.png' />&nbsp;<br>
                 <div style='margin-top:40px'></div>
-                <button class='btn btn-outline-dark' onclick="location.href='/rest/board?no=1&search_word=&cate0=한식&cate1=중식&cate2=양식&cate3=일식&cate4=간식&cate5=도시락&cate6=분식&cate7=뷔페&cate8=아시아음식&cate9=술집&cate10=치킨&cate11=패밀리레스토랑&cate12=패스트푸트&cate13=퓨전요리&cate14=카페&distance=1000'">리스트</button>
+                <button class='btn btn-dark' onclick="location.href='/rest/board?no=1&search_word=&cate0=한식&cate1=중식&cate2=양식&cate3=일식&cate4=간식&cate5=도시락&cate6=분식&cate7=뷔페&cate8=아시아음식&cate9=술집&cate10=치킨&cate11=패밀리레스토랑&cate12=패스트푸트&cate13=퓨전요리&cate14=카페&distance=1000'">리스트</button>
                 <button class='btn btn-outline-dark'>부산대 주변 모든 음식점을 보실 수 있습니다.</button>
                 <div style='margin-top:50px'></div>
-                <button class='btn btn-outline-dark' onclick="location.href='/rest/search'">필터링</button>
+                <button class='btn btn-dark' onclick="location.href='/rest/search'">필터링</button>
                 <button class='btn btn-outline-dark'>식당 카테고리와 거리를 선택할 수 있습니다.</button>
                 <div style='margin-top:120px'></div>
               </div>
@@ -58,7 +58,7 @@
                       {% for data in rand_data %}
                       <td style="width:20%;vertical-align: top;"><a href="detail?idno={{data.5}}"><img src="data:;base64,{{data.4}}"
                             width='130px' height='130px'><br /><br><button
-                            class='btn btn-outline-dark'>{{data.0}}</button></a></td>
+                            class='btn btn-dark'>{{data.0}}</button></a></td>
 
                       {% endfor %}
 
