--- a/templates/rest/detail.html
+++ b/templates/rest/detail.html
@@ -6,13 +6,13 @@
 <body>
     <div class='container' style='margin-top:20px'>
     <table class = 'table table-striped' border='3' align="center" style="width: 100%;" >
-        <tr style="color: black; font-style: Comic Sans MS;">
-            <td style='text-align:center;'>
+        <tr style="color: black; font-style: Comic Sans MS; background-color: rgba(0, 0, 0, 0);">
+            <td style='text-align:center; border:0'>
                 <img src="data:;base64,{{image}}" width="370px" height="370px" >
             </td>
         </tr>
         <tr style="color: black; font-style: Comic Sans MS;text-align: center;">
-        <td>
+        <td style = "border:0">
             <a style="text-align: center;">
                 
                     <a><font size="7" face='휴먼편지체' color="Black">
@@ -27,8 +27,8 @@
             </a>
         </td>
         </tr>
-        <tr style="color: black; font-style: Comic Sans MS;">
-        <td style='text-align:center;'>
+        <tr style="color: black; font-style: Comic Sans MS;background-color: rgba(0, 0, 0, 0);">
+        <td style='text-align:center; background-color: rgba(0, 0, 0, 0); border:0;'>
             <a href = 'https://map.kakao.com/?itemId={{data.0}}' face='Comic Sans MS' class="btn btn-info" target="_blank" >지도보기</button>
             <a href='https://map.kakao.com/?map_type=TYPE_MAP&target=walk&rt=975771,486419,{{data.11}},{{data.12}}&rt1=한가람IT&rt2={{data.2}}&rtIds=,{{data.0}}' face='Comic Sans MS' class="btn btn-link" target="_blank">길찾기</a>
             <a href='https://map.kakao.com/?srcid={{data.0}}&confirmid={{data.0}}&q={{data.2}}&rv=on'  face='Comic Sans MS' class="btn btn-link" target="_blank">로드뷰</a>
